fix load bar and overflowing title

--- a/frontend/static/custom.css
+++ b/frontend/static/custom.css
@@ -5,3 +5,7 @@
 .flex-wrap {
     flex-wrap: wrap;
 }
+
+.level-is-shrinkable {
+    flex-shrink: 1;
+}
